--- a/epic-server.toml
+++ b/epic-server.toml
@@ -18,7 +18,7 @@
 
 #the directory, relative to current, in which the epic blockchain
 #is stored
-db_root = "/root/.epic/main/chain_data"
+db_root = "/home/epicnode/.epic/main/chain_data"
 
 #path of TLS certificate file, self-signed certificates are not supported
 #tls_certificate_file = ""
@@ -34,7 +34,7 @@ api_http_addr = "0.0.0.0:3413"
 #foreign_api_secret_path = ".foreign_api_secret"
 
 #path to the file that contains the pre-generated foundation coinbases
-foundation_path = "/root/.epic/main/foundation.json"
+foundation_path = "/home/epicnode/.epic/main/foundation.json"
 
 #The chain type, which defines the genesis block and the set of cuckoo
 #parameters used for mining as well as wallet output coinbase maturity. Can be:
@@ -220,7 +220,7 @@ log_to_file = true
 file_log_level = "Error"
 
 #log file path
-log_file_path = "/root/.epic/main/epic-server.log"
+log_file_path = "/home/epicnode/.epic/main/epic-server.log"
 
 #whether to append to the log file (true), or replace it on every run (false)
 log_file_append = true
